--- a/views/cheque_form.xml
+++ b/views/cheque_form.xml
@@ -11,5 +11,214 @@
 
     </menuitem>
 
+    <record id="cheque_form_view" model="ir.ui.view">
+        <field name="name">Cheque Form</field>
+        <field name="model">cheque.format</field>
+        <field name="arch" type="xml">
+            <form string="form">
+                <sheet>
+                    <label for="name" string="Cheque Name" class="oe_edit"/>
+                    <h1><field name="name"/></h1>
+                    <group>
+                        <group>
+                            <field name="font_size"/>
+                            <field name="color"/>
+                        </group>
+                        <group>
+                            <field name="set_default"/>
+                            <field name="company_id"/>
+                        </group>
+                    </group>
+
+                    <group string="Print Partner">
+                        <group>
+                            <field name='is_partner' />
+                            <field name="is_partner_bold"/>
+                            <field name="partner_text"/>
+                        </group>
+                        <group>
+                            <field name='partner_m_top' string='From Top' attrs="{'required':[('is_partner','=',True)]}"/>
+                            <field name='partner_m_left' string='From Left' attrs="{'required':[('is_partner','=',True)]}"/>
+                        </group>
+                    </group>
+
+                    <group string="Print Address">
+                        <group>
+                            <field name='print_partner_address'/>
+                        </group>
+                        <group>
+                            <field name='partner_address_top_margin' string='From Top' attrs="{'required':[('print_partner_address','=',True)]}"/>
+                            <field name='partner_address_left_margin' string='From Left' attrs="{'required':[('print_partner_address','=',True)]}"/>
+                        </group>
+                    </group>
+
+                    <group>
+                        <group string="Print Date" >
+                            <field name='is_date' />
+                            <field name="date_seprator"/>
+                            <field name="date_formate" attrs="{'required':[('is_date','=',True)]}"/>
+                            <field name='year_formate' attrs="{'required':[('is_date','=',True)]}"/>
+                            <field name='date_m_top' string='From Top' attrs="{'required':[('is_date','=',True)]}"/>
+                        </group>
+                        <group string="Date Digit From Left">
+                            <field name='f_d_m_left' attrs="{'required':[('is_date','=',True)]}"/>
+                            <field name='s_d_m_left' attrs="{'required':[('is_date','=',True)]}"/>
+                            <field name='t_d_m_left' attrs="{'required':[('is_date','=',True)]}"/>
+                            <field name='fo_d_m_left' attrs="{'required':[('is_date','=',True)]}"/>
+                            <field name='fi_d_m_left' attrs="{'required':[('is_date','=',True)]}"/>
+                            <field name='si_d_m_left' attrs="{'required':[('is_date','=',True)]}"/>
+                            <field name="se_d_m_left" attrs="{'required':[('is_date','=',True),('year_formate','=','yyyy')]}"/>
+                            <field name='e_d_m_left' attrs="{'required':[('is_date','=',True),('year_formate','=','yyyy')]}"/>
+                        </group>
+                    </group>
+
+                    <group string="Amount In Digit">
+                        <group>
+                            <field name='is_amount' />
+                            <field name="is_currency"/>
+                            <field name='is_star' />
+                        </group>
+                        <group>
+                            <field name='amt_m_top' string='From Top' attrs="{'required':[('is_amount','=',True)]}"/>
+                            <field name='amt_m_left' string='From Left' attrs="{'required':[('is_amount','=',True)]}"/>
+                        </group>
+                    </group>
+
+
+                    <group string="Amount In Words">
+                        <group>
+                            <field name='is_amount_word' />
+                            <field name="is_star_word" string='Print Star'/>
+                            <field name="is_word_bold" string='Font Bold'/>
+                            <field name="word_in_f_line" attrs="{'required':[('is_amount_word','=',True)]}"/>
+                        </group>
+                        <group>
+                            <field name='amt_w_m_top' attrs="{'required':[('is_amount_word','=',True)]}"/>
+                            <field name='amt_w_m_left' attrs="{'required':[('is_amount_word','=',True)]}"/>
+                            <field name='amt_w_s_m_top' attrs="{'required':[('is_amount_word','=',True)]}"/>
+                            <field name='amt_w_s_m_left' attrs="{'required':[('is_amount_word','=',True)]}"/>
+                        </group>
+                    </group>
+                    <group string="Print Company">
+                        <group>
+                            <field name='is_company'/>
+                        </group>
+                        <group>
+                            <field name='c_margin_top' string='From Top' attrs="{'required':[('is_company','=',True)]}"/>
+                            <field name='c_margin_left' string='From Left' attrs="{'required':[('is_company','=',True)]}"/>
+                        </group>
+                    </group>
+
+                    <group string="Print Cheque No">
+                        <group>
+                            <field name='is_cheque_no'/>
+                        </group>
+                        <group>
+                            <field name='cheque_margin_top' string='From Top' attrs="{'required':[('is_cheque_no','=',True)]}"/>
+                            <field name='cheque_margin_left' string='From Left' attrs="{'required':[('is_cheque_no','=',True)]}"/>
+                        </group>
+                    </group>
+
+                    <group string="Print A/C PAY">
+                        <group>
+                            <field name='is_acc_pay'/>
+                        </group>
+                        <group>
+                            <field name='acc_pay_m_top' string='From Top' attrs="{'required':[('is_acc_pay','=',True)]}"/>
+                            <field name='acc_pay_m_left' string='From Left' attrs="{'required':[('is_acc_pay','=',True)]}"/>
+                        </group>
+                    </group>
+
+
+
+                    <group string="Print Fitst Signature">
+                        <group>
+                            <field name='is_f_line_sig'/>
+                        </group>
+                        <group>
+                            <field name='f_sig_m_top' string='From Top' attrs="{'required':[('is_f_line_sig','=',True)]}"/>
+                            <field name='f_sig_m_left' string='From Left' attrs="{'required':[('is_f_line_sig','=',True)]}"/>
+                        </group>
+                    </group>
+
+                    <group string="Print Second Signature">
+                        <group>
+                            <field name='is_s_line_sig' string='Print Signature'/>
+                        </group>
+                        <group>
+                            <field name='s_sig_m_top' string='From Top' attrs="{'required':[('is_s_line_sig','=',True)]}"/>
+                            <field name='s_sig_m_left' string='From Left' attrs="{'required':[('is_s_line_sig','=',True)]}"/>
+                        </group>
+                    </group>
+
+                    <group string="Print Free Text One">
+                        <group>
+                            <field name='is_free_one'/>
+                        </group>
+                        <group>
+                            <field name='f_one_margin_top' string='From Top' attrs="{'required':[('is_free_one','=',True)]}"/>
+                            <field name='f_one_margin_left' string='From Left' attrs="{'required':[('is_free_one','=',True)]}"/>
+                        </group>
+                    </group>
+
+                    <group string="Print Free Text Two">
+                        <group>
+                            <field name='is_free_two'/>
+                        </group>
+                        <group>
+                            <field name='f_two_margin_top' string='From Top' attrs="{'required':[('is_free_two','=',True)]}"/>
+                            <field name='f_two_margin_left' string='From Left' attrs="{'required':[('is_free_two','=',True)]}"/>
+                        </group>
+                    </group>
+
+
+
+                    <group string="Print Stub">
+                        <group>
+                            <field name='is_stub'/>
+                        </group>
+                        <group>
+                            <field name='stub_margin_top' string='From Top' attrs="{'required':[('is_stub','=',True)]}"/>
+                            <field name='stub_margin_left' string='From Left' attrs="{'required':[('is_stub','=',True)]}"/>
+                        </group>
+                    </group>
+
+
+
+                    <group string="Print Journal">
+                        <group>
+                            <field name='print_journal'/>
+                        </group>
+                        <group>
+                            <field name='journal_margin_top' string='From Top' attrs="{'required':[('print_journal','=',True)]}"/>
+                            <field name='journal_margin_left' string='From Left' attrs="{'required':[('print_journal','=',True)]}"/>
+                        </group>
+                    </group>
+
+
+                    <group string='Print Footer Text'>
+                        <group>
+                            <field name="is_print_footer_text"/>
+                            <field name="cheque_footer_text" attrs="{'required':[('is_print_footer_text','=',True)]}"/>
+                            <field name="footer_font_size" string='Font Size' attrs="{'required':[('is_print_footer_text','=',True)]}"/>
+                        </group>
+
+                        <group>
+                            <field name="is_footer_text_bold" string='Font Bold'/>
+                            <field name="footer_m_top" string='From Top' attrs="{'required':[('is_print_footer_text','=',True)]}"/>
+                            <field name="footer_m_left" string='From Left' attrs="{'required':[('is_print_footer_text','=',True)]}"/>
+                        </group>
+                    </group>
+
+
+
+
+
+                </sheet>
+
+            </form>
+        </field>
+    </record>
+
 
 </odoo>
